--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-          <img src="https://amdouglas.com/assets/gif/iWrVv3m.gif?0i2re3id" id="amd" alt="Loader" onload="siteOnline(this.id,0);" onerror="siteOffline(this.id,0);">
+          <img src="https://amdouglas.com/assets/gif/iWrVv3m.gif?0i2re3id" id="amd" alt="Loader" onload="siteOnline(this.id,document.getElementsByTagName('img').indexOf(this));" onerror="siteOffline(this.id,0);">
           <span class="status-online"></span>
           <span class="status-offline"></span>
         </div>
