--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </p>
         </div>
         <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-          <img src="https://amdouglas.com/assets/gif/iWrVv3m.gif?0i2re3id" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
+          <img src="http://imranhakim.co.uk/images/global/icon_linkedin_big.jpg?rh2r84d" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
           <span class="status-online"></span>
           <span class="status-offline"></span>
         </div>
@@ -108,7 +108,7 @@
           </p>
         </div>
         <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-          <img src="https://amdouglas.com/assets/gif/iWrVv3m.gif?0i2re3id" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
+          <img src="http://getstorm.xyz/img/storm_wo.png?1g200r3p" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
           <span class="status-online"></span>
           <span class="status-offline"></span>
         </div>
@@ -129,7 +129,7 @@
           </p>
         </div>
         <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-          <img src="https://amdouglas.com/assets/gif/iWrVv3m.gif?0i2re3id" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
+          <img src="https://picuse.agency/4.jpg?h5kheof" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
           <span class="status-online"></span>
           <span class="status-offline"></span>
         </div>
