--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       details,main,summary{display:block}
       body{padding:8px;padding:.5rem}
       a{color:inherit;cursor:pointer;text-decoration:none;display:block}
+      img{height:1px;opacity:0;-webkit-transform:scale(0);-moz-transform:scale(0);-ms-transform:scale(0);-o-transform:scale(0);transform:scale(0);width:1px;position:absolute;right:900%;clip:rect(0,0,0,0);line-height:1px;font-size:1px}
       textarea{resize:vertical}
       form,legend,button,input,textarea{-webkit-appearance:none;-moz-appearance:none;-ms-appearance:none;-o-appearance:none;appearance:none;-webkit-border-radius:0}
       [hidden]{display:none!important}
