--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </p>
         </div>
         <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-          <img src="http://imranhakim.co.uk/images/global/icon_linkedin_big.jpg?rh2r84d" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
+          <img src="http://imranhakim.co.uk/images/global/icon_linkedin_big.jpg?rh2r84d" id="ih" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
           <span class="status-online"></span>
           <span class="status-offline"></span>
         </div>
@@ -109,7 +109,7 @@
           </p>
         </div>
         <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-          <img src="http://getstorm.xyz/img/storm_wo.png?1g200r3p" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
+          <img src="http://getstorm.xyz/img/storm_wo.png?1g200r3p" id="stm" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
           <span class="status-online"></span>
           <span class="status-offline"></span>
         </div>
@@ -130,7 +130,7 @@
           </p>
         </div>
         <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-          <img src="https://picuse.agency/4.jpg?h5kheof" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
+          <img src="https://picuse.agency/4.jpg?h5kheof" id="pic" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
           <span class="status-online"></span>
           <span class="status-offline"></span>
         </div>
