--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
   <body>
     <style scoped>
     <!--/*--><![CDATA[/*><!--*/
-    @font-face{font-family:"SofiaPro";src:url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/SofiaProLight.woff2) format('woff2'),url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/SofiaProLight.woff) format('woff');font-weight:400;font-style:normal;font-variant:normal;font-display:fallback}
-    @font-face{font-family:"SofiaPro";src:url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/SofiaProBold.woff2) format('woff2'),url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/SofiaProBold.woff) format('woff');font-weight:700;font-style:normal;font-variant:normal;font-display:fallback}
-    html,body,*,:before,:after{font-family:'SofiaPro',Roboto,-apple-system,sans-serif}
+    @font-face{font-family:'Affogato';src:url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/Affogato-Bold.woff2) format('woff2'),url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/Affogato-Bold.woff) format('woff');font-weight:700;font-style:normal;font-variant:normal;font-display:fallback}
+    h1,h2,h3,h4,h5,h6{font-family:'Affogato',Roboto,-apple-system,sans-serif}
     /*]]>*/-->
     </style>
     <script>
