--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
     </script>
     <main class="page">
       <div class="grid">
-        <div class="cell cell-sm-12 cell-md-12 cell-lg-12">
-          <h1 class="site-title">Status &middot; A. M. Douglas</h1>
+        <div class="cell cell-top">
+          <div class="grid">
+            <div class="cell cell-sm-12 cell-md-12 cell-lg-12">
+              <h1 class="site-title">Status &middot; A. M. Douglas</h1>
+            </div>
+          </div>
         </div>
       </div>
       <div class="grid">
