--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         transform: translateX(0);
       }
       .cell-top:before {
+        content:'';
         position: absolute;
         z-index: 0;
         display: block;
