--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       .cell-status>span.status-online{background-position:0px -432px}
       .cell-status>span.status-offline{background-position:0px -480px}
       .cell-legend>span{background-position:0px -288px}
-      .site-title{font-size:48px;font-size:3rem;font-weight:700}
+      .site-title{font-size:2em;font-weight:700}
       .item-title{display:inline-block;font-size:24px;font-size:1.5rem}
       .cell-top.cell-top.identifier-online:before{
         -webkit-transform: translateX(0);
@@ -114,7 +114,10 @@
         <div class="cell cell-title">
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
-              <h1 class="site-title">Status &middot; A. M. Douglas</h1>
+              <h1 class="site-title">Status Page</h1>
+              <p>
+                Monitoring all websites hosted by A. M. Douglas
+              </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-legend">
               <span></span>
