--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <span class="item-title">imranhakim.co.uk</span>
+                <a class="item-title" href="http://imranhakim.co.uk/">imranhakim.co.uk</a>
               </h2>
               <p>
                 <span class="message">Contacting server&hellip;</span>
@@ -153,7 +153,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <span class="item-title">stormify.co.uk</span>
+                <a class="item-title" href="http://stormify.co.uk/">stormify.co.uk</a>
               </h2>
               <p>
                 <span class="message">Contacting server&hellip;</span>
@@ -175,7 +175,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <span class="item-title">picuse.agency</span>
+                <a class="item-title" href="https://picuse.agency/">picuse.agency</a>
               </h2>
               <p>
                 <span class="message">Contacting server&hellip;</span>
@@ -197,7 +197,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <span class="item-title">amdouglas.com</span>
+                <a class="item-title" href="https://amdouglas.com/">amdouglas.com</a>
               </h2>
               <p>
                 <span class="message">Contacting server&hellip;</span>
@@ -219,7 +219,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <span class="item-title">indredouglas.me</span>
+                <a class="item-title" href="https://indredouglas.me/">indredouglas.me</a>
               </h2>
               <p>
                 <span class="message">Contacting server&hellip;</span>
@@ -241,7 +241,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <span class="item-title">robomonkey.org</span>
+                <a class="item-title" href="https://robomonkey.org/">robomonkey.org</a>
               </h2>
               <p>
                 <span class="message">Contacting server&hellip;</span>
@@ -263,7 +263,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <span class="item-title">hil.org.uk</span>
+                <a class="item-title" href="http://hil.org.uk/">hil.org.uk</a>
               </h2>
               <p>
                 <span class="message">Contacting server&hellip;</span>
