--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         x.onload = null;  
         x.style.display = 'none';
         
-        identifiers[b].className = "cell cell-top identifier-online";
-        latencies[b].textContent = load_time;
+        latencies[b].textContent = load_time + 'ms';
+        identifiers[b].className = 'cell cell-top identifier-online';
         statuses[b].className = 'status-online';
         msgs[b].textContent = 'The website is online and fully operational.';
       };
@@ -103,7 +103,7 @@
         x.onload = null;  
         x.style.display = 'none';
         
-        identifiers[b].className = "cell cell-top identifier-offline";
+        identifiers[b].className = 'cell cell-top identifier-offline';
         statuses[b].className = 'status-offline';
         msgs[b].textContent = 'The website is offline, possibly for urgent maintenance.';
       }
@@ -134,10 +134,10 @@
                 <a class="item-title" href="http://imranhakim.co.uk/">imranhakim.co.uk</a>
               </h2>
               <p>
-                <span class="message">Contacting server&hellip;</span>
+                <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span> ms
+                Network latency: <span class="latency"></span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
@@ -156,10 +156,10 @@
                 <a class="item-title" href="http://stormify.co.uk/">stormify.co.uk</a>
               </h2>
               <p>
-                <span class="message">Contacting server&hellip;</span>
+                <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span> ms
+                Network latency: <span class="latency"></span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
@@ -178,10 +178,10 @@
                 <a class="item-title" href="https://picuse.agency/">picuse.agency</a>
               </h2>
               <p>
-                <span class="message">Contacting server&hellip;</span>
+                <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span> ms
+                Network latency: <span class="latency"></span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
@@ -200,10 +200,10 @@
                 <a class="item-title" href="https://amdouglas.com/">amdouglas.com</a>
               </h2>
               <p>
-                <span class="message">Contacting server&hellip;</span>
+                <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span> ms
+                Network latency: <span class="latency"></span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
@@ -222,10 +222,10 @@
                 <a class="item-title" href="https://indredouglas.me/">indredouglas.me</a>
               </h2>
               <p>
-                <span class="message">Contacting server&hellip;</span>
+                <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span> ms
+                Network latency: <span class="latency"></span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
@@ -244,10 +244,10 @@
                 <a class="item-title" href="https://robomonkey.org/">robomonkey.org</a>
               </h2>
               <p>
-                <span class="message">Contacting server&hellip;</span>
+                <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span> ms
+                Network latency: <span class="latency"></span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
@@ -266,10 +266,10 @@
                 <a class="item-title" href="http://hil.org.uk/">hil.org.uk</a>
               </h2>
               <p>
-                <span class="message">Contacting server&hellip;</span>
+                <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span> ms
+                Network latency: <span class="latency"></span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
