--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <a class="item-title" href="https://picuse.agency/">picuse.agency</a>
+                <a class="item-title" href="https://picuse.studio/">picuse.agency</a>
               </h2>
               <p>
                 <span class="message">Establishing connection&hellip;</span>
@@ -173,7 +173,7 @@
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
-              <img src="https://picuse.agency/4.jpg?h5kheof" id="pic" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
+              <img src="https://picuse.studio/4.jpg?h5kheof" id="pic" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
               <span></span>
             </div>
           </div>
