--- a/index.html
+++ b/index.html
@@ -52,8 +52,25 @@
   <body>
     <style scoped>
     <!--/*--><![CDATA[/*><!--*/
-    @font-face{font-family:'Affogato';src:url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/Affogato-Bold.woff2) format('woff2'),url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/Affogato-Bold.woff) format('woff');font-weight:700;font-style:normal;font-variant:normal;font-display:fallback}
-    h1,h2,h3,h4,h5,h6{font-family:'Affogato',Roboto,-apple-system,sans-serif}
+    @font-face {
+      font-family: 'Lato';
+      font-style: normal;
+      font-variant: normal;
+      font-display: fallback;
+      font-weight: 400;
+      src: local('Lato Regular'),local('Lato-Regular'),url(https://fonts.gstatic.com/s/lato/v11/1YwB1sO8YE1Lyjf12WNiUA.woff2) format('woff2'),url(https://fonts.gstatic.com/s/lato/v11/qIIYRU-oROkIk8vfvxw6QvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+    }
+    @font-face {
+      font-family: 'Lato';
+      font-style: normal;
+      font-variant: normal;
+      font-display: fallback;
+      font-weight: 700;
+      src: local('Lato Bold'),local('Lato-Bold'),url(https://fonts.gstatic.com/s/lato/v11/H2DMvhDLycM56KNuAtbJYA.woff2) format('woff2'),url(https://fonts.gstatic.com/s/lato/v11/qdgUG4U09HnJwhYI-uK18wLUuEpTyoUstqEm5AMlJo4.woff) format('woff');
+      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+    }
+    :root,html,body{font-family:'Lato',Roboto,-apple-system,sans-serif}
     /*]]>*/-->
     </style>
     <script>
