--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <a class="item-title" href="https://picuse.studio/">picuse.agency</a>
+                <a class="item-title" href="https://picuse.studio/">picuse.studio</a>
               </h2>
               <p>
                 <span class="message">Establishing connection&hellip;</span>
