--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@
     <style scoped>
     <!--/*--><![CDATA[/*><!--*/
     @font-face {
-      font-family: 'Lato';
+      font-family: 'RealtimeRounded';
       font-style: normal;
       font-variant: normal;
       font-display: fallback;
       font-weight: 400;
-      src: local('Lato Regular'),local('Lato-Regular'),url(https://fonts.gstatic.com/s/lato/v11/1YwB1sO8YE1Lyjf12WNiUA.woff2) format('woff2'),url(https://fonts.gstatic.com/s/lato/v11/qIIYRU-oROkIk8vfvxw6QvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+      src: url(https://status.amdouglas.com/fonts/RealtimeRounded-Reg.woff2) format('woff2'),url(https://status.amdouglas.com/fonts/RealtimeRounded-Reg.woff) format('woff');
       unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
     }
     @font-face {
-      font-family: 'Lato';
+      font-family: 'RealtimeRounded';
       font-style: normal;
       font-variant: normal;
       font-display: fallback;
       font-weight: 700;
-      src: local('Lato Bold'),local('Lato-Bold'),url(https://fonts.gstatic.com/s/lato/v11/H2DMvhDLycM56KNuAtbJYA.woff2) format('woff2'),url(https://fonts.gstatic.com/s/lato/v11/qdgUG4U09HnJwhYI-uK18wLUuEpTyoUstqEm5AMlJo4.woff) format('woff');
+      src: url(https://status.amdouglas.com/fonts/RealtimeRounded-Bold.woff2) format('woff2'),url(https://status.amdouglas.com/fonts/RealtimeRounded-Bold.woff) format('woff');
       unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
     }
-    :root,html,body{font-family:'Lato',Roboto,-apple-system,sans-serif}
+    :root,html,body{font-family:'RealtimeRounded',Roboto,-apple-system,sans-serif}
     /*]]>*/-->
     </style>
     <script>
