--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
       }
       .cell-top:before{
         background: #33c764;
-        -webkit-transform: translateX(-50%);
-        transform: translateX(-50%);
+        -webkit-transform: translateX(-100%);
+        transform: translateX(-100%);
       }
       .cell-top:after{
         background: #f44336;
-        -webkit-transform: translateX(50%);
-        transform: translateX(50%);
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%);
       }
     </style>
   </head>
@@ -119,7 +119,7 @@
         <div class="cell cell-title">
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
-              <h1 class="site-title">Status Page</h1>
+              <h1 class="site-title">Lazy Status</h1>
               <p>
                 Monitoring all websites hosted by A. M. Douglas
               </p>
