--- a/index.html
+++ b/index.html
@@ -50,29 +50,6 @@
     </style>
   </head>
   <body>
-    <style scoped>
-    <!--/*--><![CDATA[/*><!--*/
-    @font-face {
-      font-family: 'RealtimeRounded';
-      font-style: normal;
-      font-variant: normal;
-      font-display: fallback;
-      font-weight: 400;
-      src: url(https://status.amdouglas.com/fonts/RealtimeRounded-Reg.woff2) format('woff2'),url(https://status.amdouglas.com/fonts/RealtimeRounded-Reg.woff) format('woff');
-      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-    }
-    @font-face {
-      font-family: 'RealtimeRounded';
-      font-style: normal;
-      font-variant: normal;
-      font-display: fallback;
-      font-weight: 700;
-      src: url(https://status.amdouglas.com/fonts/RealtimeRounded-Bold.woff2) format('woff2'),url(https://status.amdouglas.com/fonts/RealtimeRounded-Bold.woff) format('woff');
-      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-    }
-    :root,html,body{font-family:'RealtimeRounded',Roboto,-apple-system,sans-serif}
-    /*]]>*/-->
-    </style>
     <script>
     (function(){
       "use strict";
@@ -285,6 +262,9 @@
         </div>
       </div>
       <br>
+      <script>
+        ;(function(){var a=document.createElement('link');a.rel='stylesheet';a.href='https://status.amdouglas.com/fonts/fonts.css';a.type='text/css';(document.body||document.getElementsByTagName('body')[0]).appendChild(a);})();
+      </script>
     </main>
   </body>
 </html>
