--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h1 class="site-title">Lazy Status</h1>
               <p>
-                Monitoring all websites hosted by A. M. Douglas
+                Monitoring all websites managed/maintained by A. M. Douglas
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-legend">
