--- a/index.html
+++ b/index.html
@@ -84,35 +84,13 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <a class="item-title" href="http://imranhakim.co.uk/">imranhakim.co.uk</a>
-              </h2>
-              <p>
-                <span class="message">Establishing connection&hellip;</span>
-              </p>
-              <p>
-                Network latency: <span class="latency"></span>
-              </p>
-            </div>
-            <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
-              <img src="http://imranhakim.co.uk/images/global/icon_linkedin_big.jpg?rh2r84d" id="ih" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
-              <span></span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br>
-      <div class="grid">
-        <div class="cell cell-top">
-          <div class="grid">
-            <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
-              <h2>
                 <a class="item-title" href="http://stormify.co.uk/">stormify.co.uk</a>
               </h2>
               <p>
                 <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span>
+                Network latency: <span class="latency">∞</span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
@@ -134,11 +112,11 @@
                 <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span>
+                Network latency: <span class="latency">∞</span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
-              <img src="https://picuse.studio/4.jpg?h5kheof" id="pic" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
+              <img src="https://picuse.studio/img/4.jpg?h5kheof" id="pic" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
               <span></span>
             </div>
           </div>
@@ -156,11 +134,11 @@
                 <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span>
+                Network latency: <span class="latency">∞</span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
-              <img src="https://amdouglas.com/assets/gif/iWrVv3m.gif?0i2re3id" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
+              <img src="https://amdouglas.com/assets/img/favicon-32x32.png?0ilre3id" id="amd" alt="Loader" onload="siteOnline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));" onerror="siteOffline(this.id,[].indexOf.call(document.getElementsByTagName('img'),this));">
               <span></span>
             </div>
           </div>
@@ -178,7 +156,7 @@
                 <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span>
+                Network latency: <span class="latency">∞∞</span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
@@ -200,7 +178,7 @@
                 <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span>
+                Network latency: <span class="latency">∞</span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
@@ -222,7 +200,7 @@
                 <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency"></span>
+                Network latency: <span class="latency">∞</span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
