--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,shrink-to-fit=no">
     <title>Status &middot; A. M. Douglas</title>
     <meta name="description" content="Status checker for websites maintained by A. M. Douglas">
     <link rel="icon" href="https://cdn.rawgit.com/wnda/pivot/master/favicon.ico">
@@ -84,7 +84,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <a class="item-title" href="http://stormify.co.uk/">stormify.co.uk</a>
+                <a class="item-title" href="http://getstorm.xyz/">getstorm.xyz</a>
               </h2>
               <p>
                 <span class="message">Establishing connection&hellip;</span>
@@ -156,7 +156,7 @@
                 <span class="message">Establishing connection&hellip;</span>
               </p>
               <p>
-                Network latency: <span class="latency">∞∞</span>
+                Network latency: <span class="latency">∞</span>
               </p>
             </div>
             <div class="cell cell-sm-5 cell-md-5 cell-lg-5 cell-status">
