--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           var now = today.getTime();
           var load_time = now - win.performance.timing.navigationStart;
           var report_date = today.getDate() + '.' + (today.getMonth+1) + '.' + today.getFullYear();
-          var report_time = (today.getHours() < 10 ? '0' + today.getHours() : today.getHours()) + ':' + (today.getMinutes() < 10 ? '0'+today.getMinutes() : today.getMinutes()) + ':' + (today.getSeconds() < 10 ? '0' + today.getSeconds(): today.getSeconds()).
+          var report_time = (today.getHours() < 10 ? '0' + today.getHours() : today.getHours()) + ':' + (today.getMinutes() < 10 ? '0'+today.getMinutes() : today.getMinutes()) + ':' + (today.getSeconds() < 10 ? '0' + today.getSeconds(): today.getSeconds());
           var img = new Image();
           
           img.onload = function(){
