--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,shrink-to-fit=no">
     <title>Status &middot; A. M. Douglas</title>
-    <meta name="description" content="Status checker for websites maintained by A. M. Douglas">
+    <meta name="description" content="Status checker for the websites actively hosted/maintained by A. M. Douglas">
     <link rel="icon" href="https://cdn.rawgit.com/wnda/pivot/master/favicon.ico">
     <style>
       html,body,:root{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;font-size:100%;line-height:1.27;font-family:Roboto,Helmet,Freesans,sans-serif;overflow-x:hidden;background:hsl(0,0%,100%);color:hsl(240,60%,6.9%);text-rendering:auto;-webkit-text-size-adjust:100%;-webkit-overflow-scrolling:touch;touch-action:manipulation;-webkit-font-smoothing:antialiased;-webkit-font-smoothing:subpixel-antialiased;-moz-osx-font-smoothing:grayscale;*zoom:1}html,body{min-height:100vh}*,:before,:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;border:0;vertical-align:baseline;-webkit-tap-highlight-color:transparent;-webkit-overflow-scrolling:touch;touch-action:manipulation}details,main,summary{display:block}main{max-width:992px;margin:0 auto}
     </style>
-  </head>
-  <body>
     <script>
-      loadCSS(['https://fonts.googleapis.com/css?family=Rubik:400,700','https://status.amdouglas.com/secondary.css']);
-      function loadCSS(urls){
+      window.loadCSS=function loadCSS(urls){
         for(var k = 0; k < urls.length; ++k){
           var css = document.createElement('link');
           css.rel='stylesheet';
           css.href=urls[k];
           document.head.appendChild(css);
         }
-      }
+      };
+      loadCSS(['https://status.amdouglas.com/secondary.css']);
     </script>
+  </head>
+  <body>
     <main class="page">
       <div class="grid">
         <div class="cell cell-title">
@@ -172,6 +172,8 @@
         var identifiers = doc.querySelectorAll( '.cell-top' );
         var statuses = doc.querySelectorAll( '.cell-status > span' );
         var msgs = doc.querySelectorAll( '.message' );
+        
+        win.loadCSS(['https://fonts.googleapis.com/css?family=Rubik:400,700']);
         
         for(var i = 0; i < a.length; ++i){
           var url_bust = a[i].getAttribute('data-src')+'?v='+(new Date()).getTime();
