--- a/index.html
+++ b/index.html
@@ -217,10 +217,8 @@
           var msg = 'name=status.amdouglas.com&email=status@amdouglas.com&text='+site+'was checked on '+report_date+' at '+report_time+' and indicated that it may be offline.&confirm=';
           xhr.open('POST','https://amdouglas.com/mail/',true);
           xhr.onreadystatechange = function(){
-            if(xhr.readyState === 4){
-              if(xhr.status >= 200 && xhr.status < 300){
-                console.info('Error report sent: [' + msg + ' ]');
-              }
+            if(xhr.readyState === 4 && xhr.status >= 200 && xhr.status < 300){
+              console.info('Error report sent: [' + msg + ' ]');
             }
           };
           xhr.onerror=function(){
