--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           var img = new Image();
           
           img.onload = function(){          
-            var load_time = win.performance.now() - win.performance.timing.navigationStart;
+            var load_time = (new Date().getTime()) - win.performance.timing.navigationStart;
             latencies[i].textContent = load_time + 'ms';
             identifiers[i].className = 'cell cell-top identifier-online';
             statuses[i].className = 'status-online';
